--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@workbench/core": "https://assets.oneweb.mercedes-benz.com/plugin/workbench/core/5.5.0/dist.tgz",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
@@ -24,6 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
     "typescript": "~4.1.5"
   },
   "eslintConfig": {
